# Featurizer

./: .gitignore  MANIFEST.in  README.md  REFACTORING_SUMMARY.md  example.py  feature.py  pyproject.toml  requirements.txt  residue_featurizer.py  setup.py  test_efficient_api.py  test_protein_api.py  test_protein_features.py  test_refactoring.py
claudedocs/: sequence_by_chain_example.py  sequence_extraction_feature_summary.md
docs/: feature_types.md  molecular_descriptors.md  molecule_feature.md  molecule_features.md  molecule_graph.md  protein_atom_feature.md  protein_features.md  protein_residue_feature.md
example/: MODIFIED_RESIDUES.md  README.md  STANDARDIZER_ANALYSIS.md  test_featurizer.py  test_ptm_mappings.py  test_standardizer.py  test_unk_residue.py  usage_example.ipynb  verify_sequence_length.py
examples/: README.md  advanced_usage.py  basic_usage.py  batch_processing.py
featurizer/: __init__.py  test_new_format.py
featurizer/molecule_featurizer/: __init__.py  molecular_feature.py  molecular_graph.py  molecule_feature.py  molecule_featurizer_efficient.py  molecule_graph.py
featurizer/protein_featurizer/: __init__.py  atom_featurizer.py  main.py  pdb_standardizer.py  protein_featurizer.py  residue_featurizer.py
protein_featurizer/: __init__.py  main.py
