[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "protein-featurizer"
version = "0.1.0"
description = "A comprehensive toolkit for extracting structural features from protein PDB files"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
maintainers = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "torch>=1.9.0",
    "numpy>=1.19.0",
    "pandas>=1.3.0",
    "freesasa>=2.1.0",
]

[project.urls]
Homepage = "https://github.com/eightmm/protein-featurizer"
Documentation = "https://github.com/eightmm/protein-featurizer"
Repository = "https://github.com/eightmm/protein-featurizer"
Issues = "https://github.com/eightmm/protein-featurizer/issues"

[project.scripts]
protein-featurizer = "protein_featurizer.main:main"

[tool.setuptools]
packages = ["protein_featurizer"]